2006-12-05  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	- Use @selected_fg_color for text[PRELIGHT] inside menus and
	for fg[PRELIGHT] in GtkProgressBar (Bug #382397, Michael Monreal)

2006-12-04  Thomas Wood  <thos@gnome.org>

	* NEWS: Updated for 2.9.0

2006-12-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_tab), (clearlooks_register_style_glossy):
	- Added glossy tabs.

2006-12-04  Thomas Wood  <thos@gnome.org>

	* themes/Mist/gtk-2.0/gtkrc: Use gtk-color-scheme

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_glossy_draw_radiobutton):
	- Don't draw the bullet in the inconsistent state.

2006-11-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	- Draw Evolution ETree headers as headers instead of buttons.

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_frame): Support rounded corners correctly.

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_extension):
	- Set the corners correctly in the widget parameters
	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_tab):
	- Use the corners value from the parameters

	* engines/clearlooks/src/clearlooks_style_glossy.c:
	(clearlooks_draw_button_gloss), (clearlooks_glossy_draw_button):
	- removed fill option from clearlooks_draw_button_gloss

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	- Don't use parentbg, but always bg[STATE]

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):
	- Fill the notebook background with bg[NORMAL]

2006-11-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw.c: