@@ -1,5 +1,11 @@
 2006-12-05  Benjamin Berg  <benjamin@sipsolutions.net>
 
+	* engines/clearlooks/src/clearlooks_style.c:
+	(clearlooks_style_draw_option), (clearlooks_style_draw_check):
+	- C89 fixes (Bug #382704, Jens Granseuer)
+
+2006-12-05  Benjamin Berg  <benjamin@sipsolutions.net>
+
 	* themes/Clearlooks/gtk-2.0/gtkrc:
 	- Use @selected_fg_color for text[PRELIGHT] inside menus and
 	for fg[PRELIGHT] in GtkProgressBar (Bug #382397, Michael Monreal)
